SSC-947 Fix display for description desktop and description mobile

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-teaser.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-teaser.less
@@ -108,11 +108,8 @@
     }
 
     &__descr-mobile {
-        display: none;
-
         /* phone breakpoint */
         @media screen and (max-width: @screen-sm) {
-            display: block;
             font-size: 13px;
             line-height: 18px;
             margin-top: 20px;
